Fix HTML encoding and update API_URL
Updated the API_URL in the login function and fixed HTML encoding issues.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <script src="<script>
-const API_URL = "PASTE_WEB_APP_URL_HERE";
+const API_URL = ""https://script.google.com/macros/s/AKfycbwGxR6GFIJRmcnC7x5BufaWkCFCJFagXxF_2NFeoaEjm_5ZMX4kJi3z5r8r-1M4uyNSdw/exec";
 
 function login() {
   fetch(API_URL, {
@@ -49,4 +49,5 @@ function login() {
 "></script>
 </body>
 </html>
+
 
